--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,7 +2,12 @@ name: Docker Image
 
 on:
   schedule:
-    - cron: '0 0 * * 0'
+  - cron: '0 0 * * 0'
+  workflow_dispatch:
+    inputs:
+      custom_tag_extension:
+        description: "Custom image tag extension"
+        required: false  
 #  push:
 #    branches: [ "main" ]
 #   tags: [ 'latest' ]
