--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,6 @@ docker-build:
     services:
         - docker:dind
     script:
-        - docker build --pull -t "$DOCKER_IMAGE_NAME" .
-        - docker push "$DOCKER_IMAGE_NAME:latest"
-        - docker push "$DOCKER_IMAGE_NAME:main"
+        - docker build --pull -t "$IMAGE_NAME" .
+        - docker push "$IMAGE_NAME:latest"
+        - docker push "$IMAGE_NAME:main"
