--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,5 +18,9 @@ docker-build:
         - docker:dind
     script:
         - docker build --pull -t "$IMAGE_NAME" .
+        # main tag
         - docker tag "$IMAGE_NAME" "$REGISTRY/$IMAGE_NAME:main"
         - docker push "$REGISTRY/$IMAGE_NAME:main"
+        # latest tag
+        - docker tag "$IMAGE_NAME" "$REGISTRY/$IMAGE_NAME:latest"
+        - docker push "$REGISTRY/$IMAGE_NAME:latest"
